Upgraded dependencies and added tests